--- a/assignment-impl/src/main/resources/messages/message_en_US.properties
+++ b/assignment-impl/src/main/resources/messages/message_en_US.properties
@@ -1,5 +1,9 @@
 message=Message
-message2=Customer: customer Id [{0}], customer name [{1}], phone [{2}].
-message3=Supplier: supplier Id [{0}], company name [{1}], phone [{2}].
-message4=Product: product Id [{0}], product name [{1}], unit price [{2}], is discontinued [{3}].
-message5=Order: order Id [{0}], order number [{1}], order date [{2}], total amount [{3}].
+message2=Customer: customer Id [{0}], customer name [Roseanna Tresler], phone [{1}].
+message3=Supplier: supplier Id [{0}], company name [SnailsCo], phone [{1}].
+message4=Product: product Id [{0}], product name [Snails], supplier: \
+  [supplier Id [{1}], company name [SnailsCo], phone [{2}]], unit price [{3}], is discontinued [{4}].
+message5=Order: order Id [{0}], product list: [product: [product Id [{1}], product name [Snails], supplier: \
+  [supplier Id [{2}], company name [SnailsCo], phone [{3}]], unit price [{4}], is discontinued [{5}]], \
+  order number [{6}], customer: [customer Id [{7}], customer name [Roseanna Tresler], phone [{8}]], \
+  order date [{9}], total amount [{10}].
