--- a/assignment-impl/src/main/resources/messages/message_ru_RU.properties
+++ b/assignment-impl/src/main/resources/messages/message_ru_RU.properties
@@ -1,5 +1,9 @@
 message=Сообщение
-message2=Покупатель: Id покупателя [{0}], имя покупателя [{1}], телефон [{2}].
-message3=Поставщик: Id поставщика [{0}], название компании [{1}], телефон [{2}].
-message4=Продукт: Id продукта [{0}], название продукта [{1}], цена за единицу [{2}], снят с производства [{3}].
-message5=Заказ: Id заказа [{0}], номер заказа [{1}], дата заказа [{2}], общая стоимость [{3}].
+message2=Покупатель: Id покупателя [{0}], имя покупателя [Розанна Треслер], телефон [{1}].
+message3=Поставщик: Id поставщика [{0}], название компании [СнейлсКо], телефон [{1}].
+message4=Продукт: Id товара [{0}], название товара [Моллюски], поставщик: \
+  [Id поставщика [{1}], название компании [СнейлсКо], номер телефона [{2}]], цена за единицу [{3}], снят с производства [{4}].
+message5=Заказ: Id заказа [{0}], список товаров: [товар: [Id товара [{1}], название товара [Моллюски], поставщик: \
+  [Id поставщика [{2}], название компании [СнейлсКо], номер телефона [{3}]], цена за единицу [{4}], \
+  снят с производства [{5}]], номер заказа [{6}], покупатель: [Id покупателя [{7}], имя покупателя [Розанна Треслер], \
+  номер телефона [{8}]], дата заказа [{9}], общая стоимость [{10}].
